--- a/style.css
+++ b/style.css
@@ -166,3 +166,20 @@ body {
     position: relative;
     z-index: 1;
 }
+
+.footer-section {
+    background-color: #2c2c2c;
+}
+
+.footer-section a {
+    color: #fff;
+    transition: color 0.3s;
+}
+
+.footer-section a:hover {
+    color: #ffa500; /* or any other color you prefer on hover */
+}
+
+.fab {
+    font-size: 1.5rem;
+}
