--- a/style.css
+++ b/style.css
@@ -167,6 +167,14 @@ body {
     z-index: 1;
 }
 
+footer {
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+    margin-top: auto;
+    
+
+}
+
 .footer-section {
     background-color: #2c2c2c;
 }
