--- a/style.css
+++ b/style.css
@@ -66,8 +66,8 @@ body {
 }
 
 .navbarScroll.bg-scrolled {
-    background-color: rgba(0, 0, 0, 0.8); /* This will give it a semi-transparent black background */
-    transition: background-color 0.3s ease-in-out; /* Smooth transition effect */
+    background-color: rgba(0, 0, 0, 0.8); 
+    transition: background-color 0.3s ease-in-out;
 }
 
 .navbar-brand {
@@ -155,7 +155,7 @@ body {
     border-radius: 5px;
     white-space: nowrap;
     z-index: 10;
-    pointer-events: none; /* makes the text not interfere with any hover/click events */
+    pointer-events: none; 
 }
 
 .icon-wrapper:hover .hover-text {
@@ -185,7 +185,7 @@ footer {
 }
 
 .footer-section a:hover {
-    color: #ffa500; /* or any other color you prefer on hover */
+    color: #ffa500; 
 }
 
 .fab {
