--- a/style.css
+++ b/style.css
@@ -62,10 +62,10 @@ body {
     padding: 15px 45px;
     text-align: center;
     text-transform: uppercase;
-    transition: 0.5s;
-    background-size: 200% auto;
+    transition: 0.8s;
+    background-size: 300% auto;
     color: white;            
-    box-shadow: 0 0 20px #eee;
+    box-shadow: 0 0 10px #eee;
     border-radius: 10px;
     display: inline-block;  /* Changed from block to inline-block */
     text-decoration: none;  /* Added to remove underline */
@@ -73,9 +73,10 @@ body {
 }
 
 .btn-grad:hover {
-    background-position: right center;
+    /* background-position: right center; */
     color: #fff;
     text-decoration: none;
+    box-shadow: 0 0 15px #eee; /* Increased glow effect on hover */
 }
 
 
@@ -119,7 +120,7 @@ body {
 
 .navbarScroll.bg-scrolled {
     background-color: #477977;
-    opacity: 0.3;
+    opacity: 0.6;
     transition: background-color 0.3s ease-in-out;
 }
 
@@ -131,6 +132,19 @@ body {
     font-size: 1.0rem;
     color: white;
 }
+
+.navbar-nav .nav-link {
+    color: white !important;
+    transition: all 0.3s ease;
+}
+
+.navbar-nav .nav-link:hover {
+    color: white !important;
+    text-shadow: 0 0 5px rgba(255, 255, 255, 0.7),
+                 0 0 10px rgba(255, 255, 255, 0.5),
+                 0 0 15px rgba(255, 255, 255, 0.3);
+}
+
 
 .navbar-toggler {
     margin-left: auto;
