--- a/style.css
+++ b/style.css
@@ -61,6 +61,24 @@ body {
     color: white;
 }
 
+.circle-label {
+  width: 40px;
+  height: 40px;
+  background: #bac0dd;
+  opacity: 0.85;
+  color: #fff;
+  font-weight: 400;
+  font-size: 1.5rem;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 2px 8px rgba(186,192,221,0.15);
+  margin: 0 auto;
+  letter-spacing: 1px;
+}
+
+
 .imageAboutPage {
     width: 75%;
     padding-bottom: 4ch;
